@@ -34,9 +34,7 @@ namespace arangodb {
 // only implements GET and NewIterator
 class RocksDBReadOnlyMethods final : public RocksDBReadOnlyBaseMethods {
  public:
-  explicit RocksDBReadOnlyMethods(RocksDBTransactionState* state, rocksdb::TransactionDB* db);
-
-  ~RocksDBReadOnlyMethods();
+  using RocksDBReadOnlyBaseMethods::RocksDBReadOnlyBaseMethods;
 
   Result beginTransaction() override;
   
@@ -45,22 +43,12 @@ class RocksDBReadOnlyMethods final : public RocksDBReadOnlyBaseMethods {
   Result abortTransaction() override;
 
   rocksdb::ReadOptions iteratorReadOptions() const override;
-  
-  bool ensureSnapshot() override;
-
-  rocksdb::SequenceNumber GetSequenceNumber() const noexcept override;
 
   rocksdb::Status Get(rocksdb::ColumnFamilyHandle*, rocksdb::Slice const& key,
                       rocksdb::PinnableSlice* val, ReadOwnWrites) override;
 
   std::unique_ptr<rocksdb::Iterator> NewIterator(rocksdb::ColumnFamilyHandle*,
                                                  ReadOptionsCallback) override;
- private:
-  void releaseSnapshot();
-  
-  rocksdb::TransactionDB* _db;
-
-  ReadOptions _readOptions;
 };
 
 }  // namespace arangodb
